<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.uwaterloo.crysp.itus.client.demo.DemoActivity" >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/label_itus_status"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label_itus_state"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/itus_state"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/blank" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label_training_threshold"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/training_threshold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/blank" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label_training_size"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/training_size"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/blank" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label_classification_score"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/classification_score"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/blank" />
    </LinearLayout>

</LinearLayout>
